--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-image: url('assets/background.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   min-height: 100vh;
+  margin-top: 0;
+
+
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; */
+}
+.app-container{
+  margin: 20px;
+}
+body {
+  margin: 0;
+  padding: 0;
+  margin-top: 0;
+}
+
+
+.form-div h1{
+     background-color: #0047AB;
+     padding: 2vh;
+     color: white;
+     text-align: center;
+     border-radius: 20px;
+}
+.btnDiv{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin-top: 10px;
+}
+.autocomplete-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.info {
+  background-color: #ffffff;
+  border: 1px solid #dddddd;
+  padding: 20px;
+  border-radius: 8px;
+  margin-top: 20px;
+
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+ 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#city {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.generalValue {
+  display: flex;
+  align-items: center;
+}
+
+#temp {
+  font-size: 32px;
+  margin-right: 10px;
+}
+
+#weather {
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+.feel {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+#felt {
+  font-size: 24px;
+  margin-right: 10px;
 }
